progs/cpp/09c6425e-892e-432b-beaa-e2c52481eec9/err.txt
progs/cpp/09c6425e-892e-432b-beaa-e2c52481eec9/prog.cpp:6:14: warning: missing terminating " character [enabled by default]
       cout <<";
              ^
progs/cpp/09c6425e-892e-432b-beaa-e2c52481eec9/prog.cpp:6:7: error: missing terminating " character
       cout <<";
       ^
progs/cpp/09c6425e-892e-432b-beaa-e2c52481eec9/prog.cpp: In function ‘int main()’:
progs/cpp/09c6425e-892e-432b-beaa-e2c52481eec9/prog.cpp:7:7: error: expected primary-expression before ‘return’
       return 0;
       ^
progs/cpp/09c6425e-892e-432b-beaa-e2c52481eec9/prog.cpp:7:7: error: expected ‘;’ before ‘return’
